--- a/tutorial0/checkpoint0.ipynb
+++ b/tutorial0/checkpoint0.ipynb
@@ -13,6 +13,12 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b394200c",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "These exercises are a mix of Python and Pandas practice. Most should be no more than a few lines of code! \n",
@@ -31,7 +37,8 @@
    "outputs": [],
    "source": [
     "# @@@ Question 1: Here is a python list, initialize another list called b with the same values as a.\n",
-    "a = [1, 2, 3, 4, 5, 6]\n"
+    "a = [1, 2, 3, 4, 5, 6]\n",
+    "b = [1, 2, 3, 4, 5, 6]"
    ]
   },
   {
@@ -42,7 +49,8 @@
    "outputs": [],
    "source": [
     "# @@@ Question 2: get a list containing the last 3 elements of b \n",
-    "# Yes, you can just type out [4, 5, 6] but we really want to see you demonstrate you know how to use list slicing in Python"
+    "# Yes, you can just type out [4, 5, 6] but we really want to see you demonstrate you know how to use list slicing in Python\n",
+    "b[-3,]"
    ]
   },
   {
@@ -52,7 +60,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# @@@ Question 3: Create a list of numbers from 1 to 20"
+    "# @@@ Question 3: Create a list of numbers from 1 to 20\n",
+    "twenty = list(range(1, 21))"
    ]
   },
   {
@@ -62,7 +71,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# @@@ Question 4: now get a list with only the even numbers between 1 and 100\n"
+    "# @@@ Question 4: now get a list with only the even numbers between 1 and 100\n",
+    "hundred = list(range(1, 101, 2))"
    ]
   },
   {
@@ -73,7 +83,11 @@
    "outputs": [],
    "source": [
     "# @@@ Question 5: write a function that takes two numbers as arguments\n",
-    "# and returns the first number divided by the second"
+    "# and returns the first number divided by the second\n",
+    "def divide(a, b):\n",
+    "    return a / b\n",
+    "\n",
+    "divide(6, 2)"
    ]
   },
   {
@@ -89,7 +103,17 @@
     "# if the number is a multiple of 3, print fizz\n",
     "# if the number is a multiple of 5, print buzz\n",
     "# if the number is a multiple of 3 and 5, print fizzbuzz and NOTHING ELSE\n",
-    "# if the number is neither a multiple of 3 nor a multiple of 5, print the number"
+    "# if the number is neither a multiple of 3 nor a multiple of 5, print the number\n",
+    "\n",
+    "for i in range(1, 31):\n",
+    "    if i % 3 == 0 and i % 5 == 0:\n",
+    "        print(\"fizzbuzz\")\n",
+    "    elif i % 3 == 0:\n",
+    "        print(\"fizz\")\n",
+    "    elif i % 5 == 0:\n",
+    "        print(\"buzz\")\n",
+    "    else:\n",
+    "        print(i)"
    ]
   },
   {
@@ -103,7 +127,9 @@
     "# Gyro: $9 \n",
     "# Burger: $9\n",
     "# Greek Salad: $8\n",
-    "# Philly Steak: $10"
+    "# Philly Steak: $10\n",
+    "\n",
+    "menu = {\"Gyro\":9, \"Burger\": 9, \"Greek Salad\": 8, \"Philly Steak\":10}"
    ]
   },
   {
@@ -117,7 +143,10 @@
    "outputs": [],
    "source": [
     "# @@@ Question 8: load in the \"starbucks.csv\" dataset\n",
-    "# refer to how we read the cereal.csv dataset in the tutorial\n"
+    "# refer to how we read the cereal.csv dataset in the tutorial\n",
+    "\n",
+    "import pandas as pd\n",
+    "starbucks = pd.read_csv(\"C:\\Users\\leahc\\OneDrive\\Desktop\\MDST-Onboarding-main\\data\\starbucks.csv\")"
    ]
   },
   {
@@ -127,7 +156,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# @@@ Question 9: select all rows with more than and including 400 calories"
+    "# @@@ Question 9: select all rows with more than and including 400 calories\n",
+    "df[df[\"calories\"] >= 400]"
    ]
   },
   {
@@ -137,7 +167,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# @@@ Question 10: select all rows whose vitamin c content is higher than the iron content"
+    "# @@@ Question 10: select all rows whose vitamin c content is higher than the iron content\n",
+    "df[df[\"vitamin c\"] > df[\"iron\"]]"
    ]
   },
   {
@@ -147,7 +178,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# @@@ Question 11: create a new column containing the caffeine per calories of each drink"
+    "# @@@ Question 11: create a new column containing the caffeine per calories of each drink\n",
+    "df[\"caffeine_per_calories\"] = df[\"caffeine\"] / df[\"calories\"]"
    ]
   },
   {
@@ -160,7 +192,8 @@
    },
    "outputs": [],
    "source": [
-    "# @@@ Question 12: what is the average calorie across all items?\n"
+    "# @@@ Question 12: what is the average calorie across all items?\n",
+    "print(df[\"calories\"].mean())"
    ]
   },
   {
@@ -173,7 +206,8 @@
    },
    "outputs": [],
    "source": [
-    "# @@@ Question 13: how many different categories of beverages are there?\n"
+    "# @@@ Question 13: how many different categories of beverages are there?\n",
+    "print(df[\"beverage_category\"].nunique())"
    ]
   },
   {
@@ -186,7 +220,8 @@
    },
    "outputs": [],
    "source": [
-    "# @@@ Question 14: what is the average # calories for each beverage category?\n"
+    "# @@@ Question 14: what is the average # calories for each beverage category?\n",
+    "print(df.groupby('beverage_category')['calories'].mean())\n"
    ]
   }
  ],
