--- a/tutorial1/checkpoint1.ipynb
+++ b/tutorial1/checkpoint1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Checkpoint 1 \n", 
+    "# Checkpoint 1 \n",
     "## (Do not remove any comments that start with\"# @@@\".) "
    ]
   },
@@ -60,10 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -77,7 +81,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv(\"C:\\Users\\leahc\\OneDrive\\Desktop\\MDST-Onboarding-main\\data\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Chosen one of Grade 4 Reading, Grade 4 Math, or Grade 8 Math to focus on: *ENTER YOUR CHOICE HERE*"
+    "Chosen one of Grade 4 Reading, Grade 4 Math, or Grade 8 Math to focus on: Grade 4 Reading"
    ]
   },
   {
@@ -128,7 +134,7 @@
    "outputs": [],
    "source": [
     "# @@@ 1\n",
-    "# Your Code"
+    "years = df[\"YEAR\"].nunique()"
    ]
   },
   {
@@ -144,7 +150,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# @@@ 2"
+    "# @@@ 2\n",
+    "df = df[(df['STATE'] == 'MICHIGAN') | (df['STATE'] == 'OHIO')]\n",
+    "avg = df.groupby(\"STATE\")[\"AVG_READING_4_SCORE\"].mean()\n",
+    "mi = avg['MICHIGAN']\n",
+    "oh = avg['OHIO']\n",
+    "higher = None\n",
+    "\n",
+    "if mi > oh:\n",
+    "    higher = mi\n",
+    "else:\n",
+    "    higher = oh"
    ]
   },
   {
@@ -160,7 +176,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# @@@ 3\n"
+    "# @@@ 3\n",
+    "df_2019 = df[df['YEAR'] == 2019]\n",
+    "avg_2019 = df_2019['AVG_READING_4_SCORE'].mean()"
    ]
   },
   {
@@ -176,7 +194,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# @@@ 4\n"
+    "# @@@ 4\n",
+    "max_s = df.groupby('STATE')['AVG_READING_4_SCORE'].max()"
    ]
   },
   {
@@ -205,14 +224,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# @@@ 5\n"
+    "# @@@ 5\n",
+    "df[\"EXPENDITURE_PER_STTUDENT\"] = df[\"TOTAL_EXPENDITURE\"] / df[\"ENROLL\"]\n",
+    "df['INSTRUCTION_EXP_PER_STUDENT'] = df['INSTRUCTION_EXPENDITURE'] / df['ENROLL']"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Feature engineering justification: **<BRIEFLY DESCRIBE WHY YOU MADE THE CHANGES THAT YOU DID\\>**"
+    "Feature engineering justification: Both expenditure per student and instruction expenditure per student can help to predict Grade 4 Reading scores. Funding per student is likely to impact how well students do in learning."
    ]
   },
   {
@@ -232,14 +253,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# @@@ 6\n"
+    "# @@@ 6\n",
+    "plt.figure(figsize=(8,6))\n",
+    "plt.scatter(df['EXPENDITURE_PER_STUDENT'], df['AVG_READING_4_SCORE'], alpha=0.5)\n",
+    "plt.xlabel('Expenditure per Student')\n",
+    "plt.ylabel('Grade 4 Reading Score')\n",
+    "plt.title('Expenditure per Student vs Grade 4 Reading Score')\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**<CAPTION FOR VIZ 1>**"
+    "States that spend more per student generally have higher reading scores."
    ]
   },
   {
@@ -255,14 +282,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# @@@ 7"
+    "# @@@ 7\n",
+    "plt.figure(figsize=(8,6))\n",
+    "plt.scatter(df['ENROLL_4'], df['AVG_READING_4_SCORE'], alpha=0.5, color='orange')\n",
+    "plt.xlabel('4th Grade Enrollment')\n",
+    "plt.ylabel('Grade 4 Reading Score')\n",
+    "plt.title('4th Grade Enrollment vs Grade 4 Reading Score')\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**<CAPTION FOR VIZ 2>**"
+    "No obvious linear relationship between grade 4 enrollment and reading scores."
    ]
   },
   {
@@ -291,8 +324,8 @@
    "source": [
     "# @@@ 8\n",
     "\n",
-    "# X =\n",
-    "# y = "
+    "X = df[features].dropna()\n",
+    "Y = df.loc[X.index][\"AVG_READING_4_SCORE\"]"
    ]
   },
   {
@@ -303,8 +336,8 @@
    "source": [
     "# @@@ 9 \n",
     "\n",
-    "# X_train, X_test, y_train, y_test = train_test_split(\n",
-    "#      X, y, test_size=, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "      X, y, test_size=, random_state=42)"
    ]
   },
   {
@@ -328,7 +361,8 @@
    "outputs": [],
    "source": [
     "# @@@ 10\n",
-    "# import your sklearn class here\n"
+    "# import your sklearn class here\n",
+    "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
@@ -339,7 +373,7 @@
    "source": [
     "# @@@ 11\n",
     "# create your model here\n",
-    "# model = "
+    "model = LinearRegression()"
    ]
   },
   {
@@ -380,7 +414,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# @@@ 12\n"
+    "# @@@ 12\n",
+    "mean_error = np.mean(y_pred - y_test)\n",
+    "\n",
+    "mean_abs_error = np.mean(np.abs(y_pred - y_test))\n",
+    "\n",
+    "print(mean_error)\n",
+    "print(mean_abs_error)"
    ]
   },
   {
@@ -400,17 +440,17 @@
    "source": [
     "# @@@ 13\n",
     "\n",
-    "# col_name = 'COLUMN NAME OF ONE PREDICTOR'\n",
+    "col_name = 'AVG_READING_4_SCORE'\n",
     "\n",
     "\n",
-    "# f = plt.figure(figsize=(12,6))\n",
-    "# plt.scatter(X_train[col_name], y_train, color = \"red\")\n",
-    "# plt.scatter(X_train[col_name], model.predict(X_train), color = \"green\")\n",
+    "f = plt.figure(figsize=(12,6))\n",
+    "plt.scatter(X_train[col_name], y_train, color = \"red\")\n",
+    "plt.scatter(X_train[col_name], model.predict(X_train), color = \"green\")\n",
     "\n",
-    "# plt.legend(['True Training','Predicted Training'])\n",
-    "# plt.xlabel(col_name)\n",
-    "# plt.ylabel('NAME OF THE PREDICTOR')\n",
-    "# plt.title(\"Model Behavior On Training Set\")"
+    "plt.legend(['True Training','Predicted Training'])\n",
+    "plt.xlabel(col_name)\n",
+    "plt.ylabel('Grade 4 Reading Score')\n",
+    "plt.title(\"Model Behavior On Training Set\")"
    ]
   },
   {
@@ -422,17 +462,17 @@
     "# @@@ 14\n",
     "\n",
     "\n",
-    "# col_name = 'COLUMN NAME OF ONE PREDICTOR\"\n",
+    "col_name = 'AVG_READING_4_SCORE\"\n",
     "\n",
     "\n",
-    "# f = plt.figure(figsize=(12,6))\n",
-    "# plt.scatter(X_test[col_name], y_test, color = \"blue\")\n",
-    "# plt.scatter(X_test[col_name], model.predict(X_test), color = \"black\")\n",
+    "f = plt.figure(figsize=(12,6))\n",
+    "plt.scatter(X_test[col_name], y_test, color = \"blue\")\n",
+    "plt.scatter(X_test[col_name], model.predict(X_test), color = \"black\")\n",
     "\n",
-    "# plt.legend(['True testing','Predicted testing'])\n",
-    "# plt.xlabel(col_name)\n",
-    "# plt.ylabel('NAME OF THE PREDICTOR')\n",
-    "# plt.title(\"Model Behavior on Testing Set\")"
+    "plt.legend(['True testing','Predicted testing'])\n",
+    "plt.xlabel(col_name)\n",
+    "plt.ylabel('Grade 4 Reading Score')\n",
+    "plt.title(\"Model Behavior on Testing Set\")"
    ]
   }
  ],
