--- a/tutorial1/checkpoint1.ipynb
+++ b/tutorial1/checkpoint1.ipynb
@@ -151,6 +151,7 @@
    "outputs": [],
    "source": [
     "# @@@ 2\n",
+    "# Comparing MI and OH\n",
     "df = df[(df['STATE'] == 'MICHIGAN') | (df['STATE'] == 'OHIO')]\n",
     "avg = df.groupby(\"STATE\")[\"AVG_READING_4_SCORE\"].mean()\n",
     "mi = avg['MICHIGAN']\n",
@@ -225,6 +226,8 @@
    "outputs": [],
    "source": [
     "# @@@ 5\n",
+    "# Data from the last ten years\n",
+    "df = df = df[df[\"YEAR\"] >= df[\"YEAR\"].max() - 10][df]\n",
     "df[\"EXPENDITURE_PER_STTUDENT\"] = df[\"TOTAL_EXPENDITURE\"] / df[\"ENROLL\"]\n",
     "df['INSTRUCTION_EXP_PER_STUDENT'] = df['INSTRUCTION_EXPENDITURE'] / df['ENROLL']"
    ]
@@ -258,8 +261,7 @@
     "plt.scatter(df['EXPENDITURE_PER_STUDENT'], df['AVG_READING_4_SCORE'], alpha=0.5)\n",
     "plt.xlabel('Expenditure per Student')\n",
     "plt.ylabel('Grade 4 Reading Score')\n",
-    "plt.title('Expenditure per Student vs Grade 4 Reading Score')\n",
-    "plt.show()"
+    "plt.title('Expenditure per Student vs Grade 4 Reading Score')"
    ]
   },
   {
@@ -287,8 +289,7 @@
     "plt.scatter(df['ENROLL_4'], df['AVG_READING_4_SCORE'], alpha=0.5, color='orange')\n",
     "plt.xlabel('4th Grade Enrollment')\n",
     "plt.ylabel('Grade 4 Reading Score')\n",
-    "plt.title('4th Grade Enrollment vs Grade 4 Reading Score')\n",
-    "plt.show()"
+    "plt.title('4th Grade Enrollment vs Grade 4 Reading Score')"
    ]
   },
   {
@@ -324,7 +325,9 @@
    "source": [
     "# @@@ 8\n",
     "\n",
-    "X = df[features].dropna()\n",
+    "# Predictor variable\n",
+    "X = df[[\"EXPENDITURE_PER_STUDENT\", \"INSTRUCTION_EXP_PER_STUDENT\"]].dropna()\n",
+    "# Reponse variable\n",
     "Y = df.loc[X.index][\"AVG_READING_4_SCORE\"]"
    ]
   },
@@ -337,7 +340,7 @@
     "# @@@ 9 \n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "      X, y, test_size=, random_state=42)"
+    "      X, Y, test_size=0.3, random_state=42)"
    ]
   },
   {
@@ -462,7 +465,7 @@
     "# @@@ 14\n",
     "\n",
     "\n",
-    "col_name = 'AVG_READING_4_SCORE\"\n",
+    "col_name = 'AVG_READING_4_SCORE'\n",
     "\n",
     "\n",
     "f = plt.figure(figsize=(12,6))\n",
