--- a/tutorial0/checkpoint0.ipynb
+++ b/tutorial0/checkpoint0.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -43,10 +43,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "779d96b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not tuple",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# @@@ Question 2: get a list containing the last 3 elements of b \u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# Yes, you can just type out [4, 5, 6] but we really want to see you demonstrate you know how to use list slicing in Python\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[43mb\u001b[49m\u001b[43m[\u001b[49m\u001b[43m-\u001b[49m\u001b[32;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m]\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: list indices must be integers or slices, not tuple"
+     ]
+    }
+   ],
    "source": [
     "# @@@ Question 2: get a list containing the last 3 elements of b \n",
     "# Yes, you can just type out [4, 5, 6] but we really want to see you demonstrate you know how to use list slicing in Python\n",
@@ -118,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "78aace0b",
    "metadata": {},
    "outputs": [],
@@ -134,13 +146,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "WzCQ5HOJshvA"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape (1121995180.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mstarbucks = pd.read_csv(\"C:\\Users\\leahc\\OneDrive\\Desktop\\MDST-Onboarding-main\\data\\starbucks.csv\")\u001b[39m\n                            ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape\n"
+     ]
+    }
+   ],
    "source": [
     "# @@@ Question 8: load in the \"starbucks.csv\" dataset\n",
     "# refer to how we read the cereal.csv dataset in the tutorial\n",
@@ -151,10 +172,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ac0f0c12",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# @@@ Question 9: select all rows with more than and including 400 calories\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mdf\u001b[49m[df[\u001b[33m\"\u001b[39m\u001b[33mcalories\u001b[39m\u001b[33m\"\u001b[39m] >= \u001b[32m400\u001b[39m]\n",
+      "\u001b[31mNameError\u001b[39m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# @@@ Question 9: select all rows with more than and including 400 calories\n",
     "df[df[\"calories\"] >= 400]"
@@ -227,7 +260,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -241,12 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "6cf8df3ff69f85f626faf55c10df6fe2cb9d1236b4dc73844ee4dc01369c2c99"
-   }
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
